--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By Language &amp; Size (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="/Users/rkrasniq/Desktop/Categorization_of_Data/lang_vs_size.jpeg" target="_blank"><img src="/Users/rkrasniq/Desktop/Categorization_of_Data/lang_vs_size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_size.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1038,7 +1038,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By <strong>Language &amp; Stage</strong> (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="/Users/rkrasniq/Desktop/Categorization_of_Data/lang_vs_stage.jpeg" target="_blank"><img src="/Users/rkrasniq/Desktop/Categorization_of_Data/lang_vs_stage.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_stage.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_stage.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1091,7 +1091,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By <strong>Language</strong> (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="/Users/rkrasniq/Desktop/Categorization_of_Data/language.jpeg" target="_blank"><img src="/Users/rkrasniq/Desktop/Categorization_of_Data/language.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/language.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/language.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1144,7 +1144,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By Language(data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="/Users/rkrasniq/Desktop/Categorization_of_Data/size.jpeg" target="_blank"><img src="/Users/rkrasniq/Desktop/Categorization_of_Data/size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/size.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
