--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By Language &amp; Size (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_size.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="https://camo.githubusercontent.com/4e3c7c2fc00ddefb180bb2e336752327d8fa3b5b/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e675f76735f73697a652e6a706567" target="_blank"><img src="https://camo.githubusercontent.com/4e3c7c2fc00ddefb180bb2e336752327d8fa3b5b/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e675f76735f73697a652e6a706567" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/lang_vs_size.jpeg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1038,7 +1038,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By <strong>Language &amp; Stage</strong> (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_stage.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/lang_vs_stage.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="https://camo.githubusercontent.com/21124ae9b08c652f291344a658c88c54a0654093/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e675f76735f73746167652e6a706567" target="_blank"><img src="https://camo.githubusercontent.com/21124ae9b08c652f291344a658c88c54a0654093/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e675f76735f73746167652e6a706567" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/lang_vs_stage.jpeg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1091,7 +1091,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By <strong>Language</strong> (data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/language.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/language.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="https://camo.githubusercontent.com/84bc2cb06b00c50d8494159e7bc391cc2f5d2963/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e67756167652e6a706567" target="_blank"><img src="https://camo.githubusercontent.com/84bc2cb06b00c50d8494159e7bc391cc2f5d2963/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6c616e67756167652e6a706567" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/language.jpeg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
@@ -1144,7 +1144,7 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 <li>Graph: Categorization By Language(data_categorization.xsls)</li>
 </ul><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>Python Results:</strong></p>
 
-<p><a href="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/size.jpeg" target="_blank"><img src="file:///Users/rkrasniq/git/rrezarta-krasniqi.github.io/size.jpeg" alt="Alt text" style="max-width:100%;"></a></p>
+<p><a href="https://camo.githubusercontent.com/1f5bcc4921ce66acb06235f1db9d8af1cf0a8736/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f73697a652e6a706567" target="_blank"><img src="https://camo.githubusercontent.com/1f5bcc4921ce66acb06235f1db9d8af1cf0a8736/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f73697a652e6a706567" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/size.jpeg" style="max-width:100%;"></a></p>
 
 <p><br></p>
 
