--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,4 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 
 <p><br></p>
 
-<hr><p>                        
-                        
-            
-img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"><strong>Rrezarta Krasniqi - University of Nebraska - Lincoln</strong></p></body></html>
+<hr><p><img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"><strong>Rrezarta Krasniqi - University of Nebraska - Lincoln</strong></p></body></html>
