--- a/index.html
+++ b/index.html
@@ -750,7 +750,8 @@ body .task-list{
   color:#A31515
 }
 </style><title>report</title></head><body><h5>
-<a name="user-content-date-july-1-2014" class="anchor" href="#date-july-1-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 1, 2014</h5>
+<a name="user-content-date-july-1-2014-" class="anchor" href="#date-july-1-2014-" aria-hidden="true"><span class="octicon octicon-link"></span></a><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 1, 2014                                                                                                                                                                                   <a href="https://camo.githubusercontent.com/a7041aaf9800db9a5e6805565e5c2baded09050f/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a706567" target="_blank"><img src="https://camo.githubusercontent.com/a7041aaf9800db9a5e6805565e5c2baded09050f/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a706567" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/esquared.jpeg" style="max-width:100%;"></a>
+</h5>
 
 <hr><h1>
 <a name="user-content-the-google-dataset-of-testing-results" class="anchor" href="#the-google-dataset-of-testing-results" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Google Dataset of Testing Results</h1>
@@ -1148,4 +1149,4 @@ sed -i <span class="s1">''</span> <span class="s1">'$ d'</span> testShareData.cs
 
 <p><br></p>
 
-<hr><p><img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"><strong>Rrezarta Krasniqi - University of Nebraska - Lincoln</strong></p></body></html>
+<hr><p><img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"> Rrezarta Krasniqi - University of Nebraska - Lincoln</p></body></html>
