--- a/reports.html
+++ b/reports.html
@@ -754,6 +754,6 @@ body .task-list{
 <hr><h2>
 <a name="user-content-progress-report" class="anchor" href="#progress-report" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress Report</h2>
 
-<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/july_1_2014.html" title="july_1_2014">Report</a></p>
+<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Report</a></p>
 
-<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 8, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/july_8_2014.html" title="july_8_2014">Report</a></p></body></html>
+<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 8, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_8_2014.html" title="july_8_2014">Report</a></p></body></html>
