--- a/report_july_8_2014.html
+++ b/report_july_8_2014.html
@@ -757,4 +757,117 @@ body .task-list{
 <h2>
 <a name="user-content-the-google-dataset-of-testing-results" class="anchor" href="#the-google-dataset-of-testing-results" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Google Dataset of Testing Results</h2>
 
-<p><img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"> Rrezarta Krasniqi - University of Nebraska - Lincoln</p></body></html>
+<p><br></p>
+
+<hr><ul>
+<li>Flaky Tests Results (flaky_tests_results.sql)</li>
+</ul><hr><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>MySQL Implementation:</strong></p>
+
+<div class="highlight highlight-mysql"><pre>
+<span class="k">SELECT</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span>
+       <span class="n">change_request</span><span class="p">,</span>
+       <span class="n">shard_number</span><span class="p">,</span>
+       <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">failed</span><span class="p">,</span>
+       <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"PASSED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">passed</span><span class="p">,</span>
+       <span class="nf">TRUNCATE</span> <span class="p">(</span><span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">TEST_STATUS</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span><span class="o">*</span><span class="mi">100</span><span class="o">/</span><span class="p">((</span><span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> 
+                                            <span class="o">+</span> <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"PASSED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,)))),</span><span class="mi">3</span><span class="p">)</span> <span class="k">AS</span> <span class="n">failure_rate</span><span class="p">,</span>
+       <span class="nf">avg</span><span class="p">(</span><span class="n">execution_time</span><span class="p">)</span> <span class="k">as</span> <span class="n">avg_exec</span><span class="p">,</span>
+       <span class="nf">max</span><span class="p">(</span><span class="n">execution_time</span><span class="p">)</span> <span class="k">as</span> <span class="n">max_exec_time</span><span class="p">,</span>
+       <span class="nf">max</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">max_launch_time</span><span class="p">,</span>
+       <span class="nf">min</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">min_launch_time</span>  
+  <span class="k">FROM</span>
+    <span class="n">google_dataset</span>   
+  <span class="k">WHERE</span>
+    <span class="nf">UPPER</span><span class="p">(</span><span class="n">stage</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"POST"</span>  
+  <span class="k">GROUP</span> <span class="k">BY</span>
+    <span class="n">test_suite</span><span class="p">,</span> <span class="n">change_request</span><span class="p">,</span> <span class="n">shard_number</span>
+  <span class="k">HAVING</span> <span class="n">failed</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">AND</span> <span class="n">passed</span> <span class="o">&gt;</span> <span class="mi">0</span>
+  <span class="k">ORDER</span> <span class="k">BY</span>
+    <span class="n">test_suite_mapped_id</span><span class="p">,</span> <span class="n">change_request</span><span class="p">,</span><span class="n">shard_number</span> <span class="k">ASC</span><span class="p">;</span>
+</pre></div>
+
+<p><img class="emoji" title=":pushpin:" alt=":pushpin:" src="https://assets-cdn.github.com/images/icons/emoji/pushpin.png" height="20" width="20" align="absmiddle"><strong>Note</strong> Below are the statistics of the results obtained for test_suites evaluated as flaky</p>
+
+<table>
+<thead><tr>
+<th><strong>STATS</strong></th>
+<th></th>
+<th><strong>TOTAL</strong></th>
+</tr></thead>
+<tbody>
+<tr>
+<td>flaky tests with same test_suite and same change_request and different shard numbers</td>
+<td><strong>1261</strong></td>
+<td><strong>2209</strong></td>
+</tr>
+<tr>
+<td>flaky tests with same test_suite and different change_request and different shard numbers</td>
+<td><strong>948</strong></td>
+<td></td>
+</tr>
+<tr>
+<td>Max Failure Rate</td>
+<td><strong>80%</strong></td>
+<td><strong>1 test_suite affected</strong></td>
+</tr>
+<tr>
+<td>Min Failure Rate</td>
+<td><strong>10%</strong></td>
+<td><strong>21 test_suite affected</strong></td>
+</tr>
+</tbody>
+</table><p><img class="emoji" title=":bulb:" alt=":bulb:" src="https://assets-cdn.github.com/images/icons/emoji/bulb.png" height="20" width="20" align="absmiddle"> The retrieved data are shown in a seperate excel sheet (flaky_tests_all.csv &amp; flaky_tests_stats.csv).</p>
+
+<p><br></p>
+
+<hr><ul>
+<li>Combined Shards Results (combined_shards_results.sql)</li>
+</ul><hr><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/small_red_triangle_down.png" height="20" width="20" align="absmiddle"><strong>MySQL Implementation:</strong></p>
+
+<div class="highlight highlight-mysql"><pre><span class="k">SELECT</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span><span class="n">change_request</span><span class="p">,</span><span class="n">total_exec</span><span class="p">,</span> <span class="n">total_shard_num</span><span class="p">,</span> <span class="n">total_failed</span><span class="p">,</span> <span class="n">total_passed</span><span class="p">,</span><span class="n">avg_exec_time</span><span class="p">,</span> <span class="n">rate_failure</span>
+<span class="k">FROM</span>
+<span class="p">(</span>  
+      <span class="k">SELECT</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span> 
+             <span class="n">change_request</span><span class="p">,</span> 
+             <span class="nf">SUM</span><span class="p">(</span><span class="n">execution_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">total_exec</span><span class="p">,</span> 
+             <span class="nf">COUNT</span><span class="p">(</span><span class="n">shard_number</span><span class="p">)</span> <span class="k">AS</span> <span class="n">total_shard_num</span><span class="p">,</span> 
+             <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span> <span class="o">=</span> <span class="s1">'FAILED'</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">total_failed</span><span class="p">,</span> 
+             <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span> <span class="o">=</span> <span class="s1">'PASSED'</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">total_passed</span><span class="p">,</span>
+             <span class="nf">AVG</span><span class="p">(</span><span class="n">execution_time</span><span class="p">)</span> <span class="k">as</span> <span class="n">avg_exec_time</span><span class="p">,</span>
+             <span class="nf">TRUNCATE</span><span class="p">(</span><span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span><span class="o">*</span><span class="mi">100</span><span class="o">/</span><span class="p">((</span><span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="o">+</span> <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="nf">UPPER</span><span class="p">(</span><span class="n">test_status</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"PASSED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">)))),</span> <span class="mi">3</span><span class="p">)</span> <span class="k">AS</span> <span class="n">rate_failure</span>
+             <span class="k">FROM</span> <span class="n">google_dataset</span> <span class="n">d</span> 
+             <span class="k">WHERE</span> <span class="mi">1</span><span class="o">=</span><span class="mi">1</span> 
+             <span class="k">AND</span> <span class="nf">UPPER</span><span class="p">(</span><span class="n">stage</span><span class="p">)</span> <span class="o">=</span> <span class="s2">"POST"</span>
+             <span class="k">GROUP</span> <span class="k">BY</span> <span class="n">test_suite</span><span class="p">,</span> <span class="n">change_request</span>
+<span class="p">)</span> <span class="k">AS</span> <span class="n">T</span>
+<span class="k">WHERE</span> <span class="n">total_passed</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">AND</span> <span class="n">rate_failure</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">;</span>
+</pre></div>
+
+<p><img class="emoji" title=":pushpin:" alt=":pushpin:" src="https://assets-cdn.github.com/images/icons/emoji/pushpin.png" height="20" width="20" align="absmiddle"><strong>Note</strong> Below are the statistics of the results obtained for passing test_suits with aggregated shard numbers</p>
+
+<table>
+<thead><tr>
+<th><strong>STATS</strong></th>
+<th></th>
+<th><strong>TOTAL</strong></th>
+</tr></thead>
+<tbody>
+<tr>
+<td>Test Suites with aggregated shard numbers</td>
+<td><strong>1269</strong></td>
+<td><strong>2209</strong></td>
+</tr>
+<tr>
+<td>Max Failure Rate</td>
+<td><strong>91.6%</strong></td>
+<td><strong>T276, T287, T290</strong></td>
+</tr>
+<tr>
+<td>Min Failure Rate</td>
+<td><strong>2.44%</strong></td>
+<td><strong>T306</strong></td>
+</tr>
+</tbody>
+</table><p><img class="emoji" title=":bulb:" alt=":bulb:" src="https://assets-cdn.github.com/images/icons/emoji/bulb.png" height="20" width="20" align="absmiddle"> The retrieved data are shown in a seperate excel sheet (combined_shards_results.csv).</p>
+
+<hr><p><img class="emoji" title=":copyright:" alt=":copyright:" src="https://assets-cdn.github.com/images/icons/emoji/copyright.png" height="20" width="20" align="absmiddle"> Rrezarta Krasniqi - University of Nebraska - Lincoln</p></body></html>
