Added new files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html><html><head><meta charset="utf-8"><style>body
 {
   font-size:15px;
@@ -753,8 +752,10 @@ body .task-list{
 </style><title>reports</title></head><body><p><a href="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/03dcf107c4f2bdd8f802b52a8178cd89f2090370/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f65737175617265642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/esquared.jpg" style="max-width:100%;"></a></p>
 
 <hr><h2>
-<a name="user-content-progress-report" class="anchor" href="#progress-report" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress Report</h2>
+<a name="user-content-progress-reports" class="anchor" href="#progress-reports" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress Reports</h2>
 
-<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Report</a></p>
+<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 1, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_1_2014.html" title="july_1_2014">Report</a></p>
 
-<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/date.png" height="20" width="20" align="absmiddle"> July 8, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_8_2014.html" title="july_8_2014">Report</a></p></body></html>
+<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 8, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_8_2014.html" title="july_8_2014">Report</a></p>
+
+<p><img class="emoji" title=":date:" alt=":date:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4c5.png" height="20" width="20" align="absmiddle"> July 15, 2014 &gt; <a href="http://rrezarta-krasniqi.github.io/report_july_15_2014.html" title="july_8_2014">Report</a></p></body></html>
