--- a/report_july_15_2014.html
+++ b/report_july_15_2014.html
@@ -1216,6 +1216,80 @@ containing <strong>6878</strong> change requests</li>
 
 <p><br></p>
 
+<hr><p>Flow of Google Data Grouped By <strong>Change Requests Per Day</strong> (change_request_day.sql)</p>
+
+<hr><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f53b.png" height="20" width="20" align="absmiddle"><strong>MySQL Implementation:</strong></p>
+
+<div class="highlight highlight-MySQL"><pre><span class="k">SELECT</span> <span class="n">change_request</span><span class="p">,</span> 
+       <span class="nf">DAY</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">day</span><span class="p">,</span>
+       <span class="n">tot_runs_per_day</span><span class="p">,</span>
+       <span class="nf">AVG</span><span class="p">((((</span><span class="n">execution_time</span> <span class="o">%</span> <span class="p">(</span><span class="mi">1000</span><span class="o">*</span><span class="mi">60</span><span class="o">*</span><span class="mi">60</span><span class="p">))</span> <span class="o">%</span> <span class="p">(</span><span class="mi">1000</span><span class="o">*</span><span class="mi">60</span><span class="p">))</span> <span class="o">/</span> <span class="mi">1000</span><span class="p">))</span> <span class="k">AS</span> <span class="n">avg_execution_time_sec</span><span class="p">,</span>
+       <span class="nf">SUM</span><span class="p">(</span><span class="n">failed</span><span class="o">*</span><span class="mi">100</span><span class="p">.</span><span class="mi">0</span><span class="p">)</span><span class="o">/</span><span class="n">tot_runs_per_day</span> <span class="k">AS</span> <span class="n">rate_failure</span>
+<span class="k">FROM</span>
+<span class="p">(</span>
+    <span class="k">SELECT</span> <span class="n">change_request</span><span class="p">,</span>
+           <span class="n">launch_time</span><span class="p">,</span>
+           <span class="nf">COUNT</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">tot_runs_per_day</span><span class="p">,</span>
+           <span class="n">execution_time</span><span class="p">,</span>
+           <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span><span class="o">=</span><span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">failed</span><span class="p">,</span>
+           <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span><span class="o">=</span><span class="s2">"PASSED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">passed</span>
+    <span class="k">FROM</span> <span class="n">google_dataset</span> <span class="n">d</span>
+    <span class="k">GROUP</span> <span class="k">BY</span> <span class="n">change_request</span><span class="p">,</span> <span class="nf">DAY</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span>
+<span class="p">)</span> <span class="k">AS</span> <span class="n">T</span>
+<span class="k">GROUP</span> <span class="k">BY</span> <span class="n">change_request</span><span class="p">,</span> <span class="n">day</span>
+<span class="k">HAVING</span> <span class="n">rate_failure</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">;</span>
+</pre></div>
+
+<ul>
+<li><p>Graph: Categorization By <strong>Change Request Per Day</strong> (change_request_day.xsls)</p></li>
+<li><p>First Graph Representation</p></li>
+</ul><p><a href="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_1.jpg" style="max-width:100%;"></a></p>
+
+<ul>
+<li>Second Graph Representation</li>
+</ul><p><a href="https://camo.githubusercontent.com/5c3a7a120039b56027af17985b70ed712ec57c84/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f322e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/5c3a7a120039b56027af17985b70ed712ec57c84/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f322e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/change_req_per_day_2.jpg" style="max-width:100%;"></a></p>
+
+<ul>
+<li>Third Graph Representation
+<a href="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_3.jpg" style="max-width:100%;"></a>
+</li>
+</ul><p><br></p>
+
+<hr><p>Flow of Google Data Grouped By <strong>Total Test Execution Per Day</strong> (total_test_executions_per_day.sql)</p>
+
+<hr><p><img class="emoji" title=":small_red_triangle_down:" alt=":small_red_triangle_down:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f53b.png" height="20" width="20" align="absmiddle"><strong>MySQL Implementation:</strong></p>
+
+<div class="highlight highlight-MySQL"><pre><span class="k">SELECT</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span>
+       <span class="nf">DAY</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">day</span><span class="p">,</span>
+       <span class="n">tot_runs_per_day</span><span class="p">,</span>
+       <span class="nf">AVG</span><span class="p">((((</span><span class="n">execution_time</span> <span class="o">%</span> <span class="p">(</span><span class="mi">1000</span><span class="o">*</span><span class="mi">60</span><span class="o">*</span><span class="mi">60</span><span class="p">))</span> <span class="o">%</span> <span class="p">(</span><span class="mi">1000</span><span class="o">*</span><span class="mi">60</span><span class="p">))</span> <span class="o">/</span> <span class="mi">1000</span><span class="p">))</span> <span class="k">AS</span> <span class="n">avg_execution_time_sec</span><span class="p">,</span>
+       <span class="nf">SUM</span><span class="p">(</span><span class="n">failed</span><span class="o">*</span><span class="mi">100</span><span class="p">.</span><span class="mi">0</span><span class="p">)</span><span class="o">/</span><span class="n">tot_runs_per_day</span> <span class="k">AS</span> <span class="n">rate_failure</span>
+<span class="k">FROM</span>
+<span class="p">(</span>
+    <span class="k">SELECT</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span>
+           <span class="n">launch_time</span><span class="p">,</span>
+           <span class="nf">COUNT</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span> <span class="k">AS</span> <span class="n">tot_runs_per_day</span><span class="p">,</span>
+           <span class="n">execution_time</span><span class="p">,</span>
+           <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span><span class="o">=</span><span class="s2">"FAILED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">failed</span><span class="p">,</span>
+           <span class="nf">SUM</span><span class="p">(</span><span class="k">IF</span><span class="p">(</span><span class="n">test_status</span><span class="o">=</span><span class="s2">"PASSED"</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span> <span class="k">AS</span> <span class="n">passed</span>
+    <span class="k">FROM</span> <span class="n">google_dataset</span> <span class="n">d</span>
+    <span class="k">GROUP</span> <span class="k">BY</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span> <span class="nf">DAY</span><span class="p">(</span><span class="n">launch_time</span><span class="p">)</span>
+<span class="p">)</span> <span class="k">AS</span> <span class="n">T</span>
+<span class="k">GROUP</span> <span class="k">BY</span> <span class="n">test_suite_mapped_id</span><span class="p">,</span> <span class="n">day</span>
+<span class="k">HAVING</span> <span class="n">rate_failure</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">;</span>
+</pre></div>
+
+<ul>
+<li><p>Graph: Categorization By <strong>Test Suite Execution Per Daye</strong> (total_test_executions_per_day.xsls)</p></li>
+<li><p>First Graph Representation</p></li>
+</ul><p><a href="https://camo.githubusercontent.com/9281a03cf940d7c49d0646d8695d565a62821040/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/9281a03cf940d7c49d0646d8695d565a62821040/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/test_exec_per_day_1.jpg" style="max-width:100%;"></a></p>
+
+<ul>
+<li>Second Graph Representation</li>
+</ul><p><a href="https://camo.githubusercontent.com/8cc91d1d073a6b3c1aaf5175a75f381bb2f3c2d5/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f322e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/8cc91d1d073a6b3c1aaf5175a75f381bb2f3c2d5/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f322e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/test_exec_per_day_2.jpg" style="max-width:100%;"></a></p>
+
+<p><br></p>
+
 <hr><p>Unique Failing Test Suites (Executions) During ECT Phase (unique_faling_test_suites_post_pre.sql)</p>
 
 <hr><p><img class="emoji" title=":bulb:" alt=":bulb:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4a1.png" height="20" width="20" align="absmiddle"><strong>NOTE:</strong></p>
