new files and images added 2

--- a/report_july_15_2014.html
+++ b/report_july_15_2014.html
@@ -1242,18 +1242,18 @@ containing <strong>6878</strong> change requests</li>
 
 <ul>
 <li><p>Graph: Categorization By <strong>Change Request Per Day</strong> (change_request_day.xsls)</p></li>
-<li><p>First Graph Representation</p></li>
+<li><p><strong>First Graph Representation</strong></p></li>
 </ul><p><a href="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/c2e6a493cffd01fbcd05734791758bf1fc708d57/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_1.jpg" style="max-width:100%;"></a></p>
 
 <ul>
-<li>Second Graph Representation</li>
+<li><strong>Second Graph Representation</strong></li>
 </ul><p><a href="https://camo.githubusercontent.com/5c3a7a120039b56027af17985b70ed712ec57c84/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f322e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/5c3a7a120039b56027af17985b70ed712ec57c84/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e67655f7265715f7065725f6461795f322e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/change_req_per_day_2.jpg" style="max-width:100%;"></a></p>
 
 <ul>
-<li>Third Graph Representation
-<a href="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_3.jpg" style="max-width:100%;"></a>
-</li>
-</ul><p><br></p>
+<li><strong>Third Graph Representation</strong></li>
+</ul><p><a href="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/f3898262abfc014461dc94a58c977713e69bcf22/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f6368616e675f7265715f7065725f6461795f332e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/chang_req_per_day_3.jpg" style="max-width:100%;"></a></p>
+
+<p><br></p>
 
 <hr><p>Flow of Google Data Grouped By <strong>Total Test Execution Per Day</strong> (total_test_executions_per_day.sql)</p>
 
@@ -1281,11 +1281,11 @@ containing <strong>6878</strong> change requests</li>
 
 <ul>
 <li><p>Graph: Categorization By <strong>Test Suite Execution Per Daye</strong> (total_test_executions_per_day.xsls)</p></li>
-<li><p>First Graph Representation</p></li>
+<li><p><strong>First Graph Representation</strong></p></li>
 </ul><p><a href="https://camo.githubusercontent.com/9281a03cf940d7c49d0646d8695d565a62821040/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f312e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/9281a03cf940d7c49d0646d8695d565a62821040/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f312e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/test_exec_per_day_1.jpg" style="max-width:100%;"></a></p>
 
 <ul>
-<li>Second Graph Representation</li>
+<li><strong>Second Graph Representation</strong></li>
 </ul><p><a href="https://camo.githubusercontent.com/8cc91d1d073a6b3c1aaf5175a75f381bb2f3c2d5/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f322e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/8cc91d1d073a6b3c1aaf5175a75f381bb2f3c2d5/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f746573745f657865635f7065725f6461795f322e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/test_exec_per_day_2.jpg" style="max-width:100%;"></a></p>
 
 <p><br></p>
@@ -1404,10 +1404,15 @@ they are then grouped by stage and size</p></li>
 </pre></div>
 
 <ul>
-<li>Graph: Unique Test Suite Failures During POST Phase (unique_test_suite_failures_post.xsls)</li>
+<li><p>Graph: Unique Test Suite Failures During POST Phase (unique_test_suite_failures_post.xsls)</p></li>
+<li><p><strong>First Graph Representation</strong></p></li>
 </ul><p><a href="https://camo.githubusercontent.com/f72254a952421764a63ee5a1da575e87193c7242/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73742e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/f72254a952421764a63ee5a1da575e87193c7242/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73742e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/unique_failing_test_suites_post.jpg" style="max-width:100%;"></a></p>
 
+<p><strong>Second Graph Representation</strong></p>
+
 <p><a href="https://camo.githubusercontent.com/41ba0f3eaa7915daf6c40007328ffbc0f1b281f4/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73745f32642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/41ba0f3eaa7915daf6c40007328ffbc0f1b281f4/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73745f32642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/unique_failing_test_suites_post_2d.jpg" style="max-width:100%;"></a></p>
+
+<p><strong>Third Graph Representation</strong></p>
 
 <p><a href="https://camo.githubusercontent.com/18f387c163273decbe49ea98a001f78f6b5f0d09/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73745f33642e6a7067" target="_blank"><img src="https://camo.githubusercontent.com/18f387c163273decbe49ea98a001f78f6b5f0d09/687474703a2f2f7272657a617274612d6b7261736e6971692e6769746875622e696f2f756e697175655f6661696c696e675f746573745f7375697465735f706f73745f33642e6a7067" alt="Alt text" data-canonical-src="http://rrezarta-krasniqi.github.io/unique_failing_test_suites_post_3d.jpg" style="max-width:100%;"></a></p>
 
